<resources>
    <string name="app_name">FutsalYuk</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="alamat">Alamat</string>
    <string name="penyedia_lapangan">Penyedia Lapangan</string>
    <string name="nama">Faishal Rusydan</string>
    <string name="status">Hakuna Matata</string>
    <string name="posisi">Posisi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">Lanjut</string>
    <string name="daftar">Daftar</string>
    <string name="syarat">Dengan ini kamu menyetujui persyaratan kami yang berlaku</string>
    <string name="no_telp">Nomor Telepon</string>
    <string name="nav_tim">Tim</string>
    <string name="nav_play">Play</string>
    <string name="nav_profil">Profil</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="pertandingan">Pertandingan.</string>
    <string name="futsal_bro">Futsal Bro?</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="bantuan">Bantuan</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_view">bottomViewActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom">bottomActivity</string>
    <string name="title_activity_tab">tabAct</string>
    <string name="title_activity_embo">embo</string>
    <string name="random_match">Random Match</string>
    <string name="friendly_match">Friendly Match</string>
    <string name="profile_pict">profile_pict</string>

    <string-array name="spinner_pos">
        <item>Keeper</item>
        <item>Anchor</item>
        <item>Flank</item>
        <item>Pivot</item>
    </string-array>
</resources>
