<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/box2">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="28dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/pertandingan"
        android:textColor="@android:color/white"
        android:textSize="43sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="113dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/futsal_bro"
        android:textColor="@color/colorWhite"
        android:textSize="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="145dp"
            android:layout_height="182dp"
            android:layout_margin="10dp"
            android:background="@drawable/friendly_match"
            android:contentDescription="@string/friendly_match" />

        <ImageButton
            android:layout_width="145dp"
            android:layout_height="182dp"
            android:layout_margin="10dp"
            android:background="@drawable/random_match"
            android:contentDescription="@string/random_match" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>