<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    tools:context="com.futsalyuk.runup.login_activity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans"
            android:text="@string/email"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ETemail"
            android:layout_width="300dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/form"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#888888"
            android:textSize="17sp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/password"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ETpassword"
            android:layout_width="300dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/form"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#888888"
            android:textSize="17sp" />

        <Button
            android:id="@+id/next_reg"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn"
            android:fontFamily="@font/open_sans"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/open_sans"
            android:text="@string/syarat"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>